[gd_scene load_steps=12 format=3 uid="uid://bryeb2q644xp6"]

[ext_resource type="Script" path="res://scenes/mafia_enforcer_5.gd" id="1_l0vak"]
[ext_resource type="Texture2D" uid="uid://c6gmdwprc5s0p" path="res://assets/Enemies/MafiaEnforcer5/SimpleEnemy5Death.png" id="2_vult1"]
[ext_resource type="Texture2D" uid="uid://dyky2jv52gqkp" path="res://assets/Enemies/MafiaEnforcer5/SimpleEnemy5Idle.png" id="3_10pjw"]
[ext_resource type="Texture2D" uid="uid://4rg5vlo5qsnj" path="res://assets/Enemies/MafiaEnforcer5/SimpleEnemy5Run.png" id="4_qnscu"]
[ext_resource type="Script" path="res://scenes/enemy_sight_5.gd" id="5_ni0k7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hk7yr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vult1")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_10pjw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_qnscu")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_83qgc"]
radius = 25.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aipwq"]
size = Vector2(50, 50)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h74u3"]
bg_color = Color(0, 0, 0, 0.65098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mk4m2"]
bg_color = Color(0.905254, 0, 0.0149213, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_r2jbm"]
radius = 1.0

[node name="MafiaEnforcer5" type="CharacterBody2D" groups=["enemies", "mafia_enforcer_5"]]
process_mode = 1
z_index = 3
collision_layer = 4
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_l0vak")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 3
position = Vector2(1.52588e-05, 1.52588e-05)
scale = Vector2(0.0625, 0.0625)
sprite_frames = SubResource("SpriteFrames_hk7yr")
animation = &"run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 3
shape = SubResource("CircleShape2D_83qgc")

[node name="EntranceTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]
z_index = 3
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = 3
shape = SubResource("RectangleShape2D_aipwq")

[node name="EnemyHealthBar" type="ProgressBar" parent="."]
z_index = 3
offset_left = -38.0
offset_top = -48.0
offset_right = 38.0
offset_bottom = -33.0
theme_override_styles/background = SubResource("StyleBoxFlat_h74u3")
theme_override_styles/fill = SubResource("StyleBoxFlat_mk4m2")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_path_custom_line_width = 1.0

[node name="HitTimer" type="Timer" parent="."]

[node name="TrackTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="TeleportChanceTimer" type="Timer" parent="."]
autostart = true

[node name="TeleportTimer" type="Timer" parent="."]
one_shot = true

[node name="LazerBeamChanceTimer" type="Timer" parent="."]
autostart = true

[node name="LazerBeamTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="LineOfSight" type="RayCast2D" parent="."]
enabled = false
target_position = Vector2(5000, 0)
collision_mask = 7
script = ExtResource("5_ni0k7")

[node name="Line2D" type="Line2D" parent="LineOfSight"]
modulate = Color(0, 1, 1, 1)
self_modulate = Color(0, 1, 1, 1)
z_index = 1
points = PackedVector2Array(0, 0, 89, 0)
width = 0.0
default_color = Color(0, 1, 1, 1)

[node name="OutOfBoundsChecker" type="Area2D" parent="." groups=["out_of_bounds_checker"]]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBoundsChecker"]
shape = SubResource("CircleShape2D_r2jbm")

[connection signal="timeout" from="EntranceTimer" to="." method="_on_entrance_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="TrackTimer" to="." method="_on_track_timer_timeout"]
[connection signal="timeout" from="TeleportChanceTimer" to="." method="_on_teleport_chance_timer_timeout"]
[connection signal="timeout" from="TeleportTimer" to="." method="_on_teleport_timer_timeout"]
[connection signal="timeout" from="LazerBeamChanceTimer" to="." method="_on_lazer_beam_chance_timer_timeout"]
[connection signal="timeout" from="LazerBeamTimer" to="." method="_on_lazer_beam_timer_timeout"]
